# Programming_Languages_Project

./: .gitignore  CHANGELOG.md  CURRENT_PROGRESS.md  FUTURE_PROGRESS.md  LICENSE  Makefile  Project.pptx  README.md  admin.cabal  backend  cabal.project  chatlog.md  deploy.sh  instructions.txt
FunctionalProgrammingShowcase/: .project  CHANGELOG.md  FunctionalProgrammingShowcase.cabal
FunctionalProgrammingShowcase/app/: Main.hs
FunctionalProgrammingShowcase/app/FirstClassFunctions/: FirstClassFunctions.hs  Main.hs
FunctionalProgrammingShowcase/app/FunctionComposition/: FunctionComposition.hs  Main.hs
FunctionalProgrammingShowcase/app/Generator/: Hello.hs  Main.hs
FunctionalProgrammingShowcase/app/HigherOrderFunctions/: HigherOrderFunctions.hs  Main.hs
FunctionalProgrammingShowcase/app/Immutability/: Immutability.hs  Main.hs  state.json
FunctionalProgrammingShowcase/app/MonadLazyEvaluation/: Main.hs  MonadLazyEvaluation.hs
FunctionalProgrammingShowcase/app/PureFunctionsCurrying/: Main.hs  PureFunctionsCurrying.hs
FunctionalProgrammingShowcase/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Hemang/src/ModelBuilder/: Main.hs  ModelGen.hs  backend
Hemang/src/RoutesBuilder/: RouteRegistry.hs  generate_routes
Pipeline/Run_Time_Pipeline/: Colors.hs  DynamicComposer.hs  FileManager.hs  Hemang.pipeline  Main.hs  ReadMe.md  Run_Time_Pipeline.cabal  SnippetEvaluator.hs  THGenerated.hs  Templates.hs  Test.pipeline  Test2.pipeline  Test3.pipeline  Types.hs  Utils.hs  stack.yaml  sujit.pipeline
STORE/: Main.hs  ModelGen.hs  ModelRegistry.hs  Registry.hs
app/: DBSetupMain.hs  DynamicSQLPrompt.hs  Main.hs  QueryMain.hs  QueryPrompter.hs  SchemaParser.hs  Server.hs  TesterMain.hs
app/Links/: AddressLinks.hs  CategoryLinks.hs  CouponLinks.hs  CustomerLinks.hs  InventoryLinks.hs  PaymentLinks.hs  ProductCategoryLinks.hs  ProductLinks.hs  ReviewLinks.hs
app/ModelBuilder/: DBBuilder.hs  DBMain.hs  Main.hs  ModelGen.hs  ModelRegistry.hs  SchemaSeedBuilder.hs
app/RoutesBuilder/: Address.hs  AddressRoutes.hs  Main.hs  RouteGen.hs  RouteRegistry.hs
database/: schema.sql  seed.sql
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.0.2/: modelbuilder-0.1.0.0-inplace.conf  package.cache  routesbuilder-0.1.0.0-inplace.conf
dist-newstyle/packagedb/ghc-9.6.7/: admin-0.1.0.0-inplace-modelbuilder.conf  admin-0.1.0.0-inplace-routebuilder.conf  package.cache
frontend/: package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/app/addresses/: page.tsx
frontend/app/categories/: page.tsx
frontend/app/coupons/: page.tsx
frontend/app/customers/: page.tsx
frontend/app/customers/[id]/: page.tsx
frontend/app/inventory/: page.tsx
frontend/app/inventory/[id]/: page.tsx
frontend/app/inventory/[id]/edit/: page.tsx
frontend/app/inventory/add/: page.tsx
frontend/app/orders/: page.tsx
frontend/app/payments/: page.tsx
frontend/app/product-categories/: page.tsx
frontend/app/products/: page.tsx
frontend/app/reports/: page.tsx
frontend/app/reviews/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/suppliers/: page.tsx
frontend/components/: categories-table.tsx  category-columns.tsx  customer-columns.tsx  dashboard-stats.tsx  data-table-pagination.tsx  data-table.tsx  header.tsx  inventory-columns.tsx  inventory-table.tsx  low-stock-items.tsx  main-nav.tsx  mode-toggle.tsx  order-columns.tsx  overview.tsx  recent-activity.tsx  recent-items.tsx  recent-sales.tsx  sidebar.tsx  supplier-columns.tsx
frontend/components/customers/: address-list.tsx
frontend/components/dashboard/: inventory-chart.tsx  recent-activity.tsx
frontend/components/layout/: app-layout.tsx  sidebar.tsx  topbar.tsx
frontend/components/reports/: category-report.tsx  inventory-report.tsx  sales-report.tsx
frontend/components/ui/: data-table.tsx  progress.tsx
frontend/lib/: api.ts  data.ts  utils.ts
src/: Main.hs  ModelGen.hs  ModelRegistry.hs  Order.hs  Product.hs  Registry.hs  User.hs
src/ModelBuilder/: Makefile  ModelBuilder.cabal  ModelGen.hs  backend
src/RoutesBuilder/: Main.hs  Makefile  RouteGen.hs  RouteRegistry.hs  RoutesBuilder.cabal  generate_routes  temp.hs
src/app/: Main.hs  app.cabal
