cabal-version:       3.0
name:                admin
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Hemang
maintainer:          Hemang.Seth@iiitb.ac.in
build-type:          Simple

-- =====================================================
-- Global Warnings
-- =====================================================
common warnings
  ghc-options: -Wall -v0 -w -dno-debug-output

-- =====================================================
-- Library: modelbuilder
-- =====================================================
library modelbuilder
  hs-source-dirs:    app/ModelBuilder
  exposed-modules:
      ModelGen
    , ModelRegistry
    , SchemaSeedBuilder
    , DBBuilder
  build-depends:
      base               >=4.15 && <4.19
    , aeson              >=1.5
    , bytestring
    , containers
    , directory
    , filepath
    , sqlite-simple
    , scotty
    , template-haskell
    , text
    , transformers
    , wai
    , wai-cors
    , warp
  default-language:   Haskell2010
  ghc-options:        -Wall -v0 -w -dno-debug-output



executable dbbuilder
  main-is:             DBMain.hs
  hs-source-dirs:      app/ModelBuilder
  build-depends:       base
                     , text
                     , bytestring
                     , sqlite-simple
                     , directory
                     , filepath
  default-language:    Haskell2010
  other-modules:       DBBuilder
-- =====================================================
-- Library: routebuilder
-- =====================================================
library routebuilder
  hs-source-dirs:    app/RoutesBuilder
  exposed-modules:
      RouteGen
    , RouteRegistry
  build-depends:
      base               >=4.15 && <4.19
    , aeson              >=1.5
    , bytestring
    , containers
    , directory
    , filepath
    , http-types
    , scotty
    , template-haskell
    , text
    , transformers
    , wai
    , wai-cors
    , warp
  default-language:   Haskell2010
  ghc-options:        -Wall -v0 -w -dno-debug-output

-- =====================================================
-- Executable: admin (Backend Server + Generation)
-- =====================================================
executable admin
  main-is:           Main.hs
  hs-source-dirs:    app
  other-modules:
      ModelBuilder.Main
    , RoutesBuilder.Main
  build-depends:
      base               >=4.15 && <4.19
    , aeson              >=1.5
    , bytestring         >=0.11.5.4
    , containers
    , directory
    , filepath
    , scotty
    , template-haskell
    , text
    , transformers
    , wai
    , wai-cors
    , warp
    , http-types
    , modelbuilder
    , routebuilder
  ghc-options:        -Wall -v0 -w -dno-debug-output
  default-language:   Haskell2010

-- =====================================================
-- Executable: tester (SQL Prompt CLI)
-- =====================================================
executable tester
  main-is:           TesterMain.hs
  hs-source-dirs:    app
  other-modules:
      DynamicSQLPrompt
  build-depends:
      base               >=4.15 && <4.19
    , ansi-terminal
    , containers
    , haskeline
    , text
  ghc-options:        -Wall -v0 -w -dno-debug-output
  default-language:   Haskell2010

-- =====================================================
-- Executable: server (Scotty API Server on Port 3000)
-- =====================================================
executable server
  main-is:           Server.hs
  hs-source-dirs:    app generated/routes generated/models
  build-depends:
      base               >=4.14 && <5
    , aeson
    , ansi-terminal
    , bytestring
    , containers
    , directory
    , io-streams
    , system-filepath
    , exceptions
    , sqlite-simple
    , http-types
    , scotty
    , text
    , bytestring
    , time
    , transformers
    , vector             >=0.12
    , wai
    , wai-extra
    , warp
  ghc-options:        -Wall -v0 -w -dno-debug-output
  default-language:   Haskell2010
