cabal-version:       >=1.14
name:                modelbuilder
version:             0.1.0.0
build-type:          Simple

library
  hs-source-dirs:    .
  exposed-modules:   ModelGen, ModelRegistry, Registry
  build-depends:     base >=4.7 && <5,
                     template-haskell,
                     directory,
                     filepath,
                     text,
                     containers
  default-language:  Haskell2010

executable modelbuilder
  main-is:           Main.hs
  hs-source-dirs:    .
  build-depends:     base >=4.7 && <5,
                     modelbuilder,  
                     template-haskell,
                     directory,
                     filepath,
                     text,
                     containers
  ghc-options:       -odir build/obj -hidir build/hi
  default-language:  Haskell2010
