cabal-version:       >=1.14
name:                routesbuilder
version:             0.1.0.0
build-type:          Simple

library
  hs-source-dirs:    .
  exposed-modules:   RouteGen, RouteRegistry
  build-depends:     base >=4.7 && <5,
                     text,
                     directory,
                     filepath
  default-language:  Haskell2010

executable routesbuilder
  main-is:           Main.hs
  hs-source-dirs:    .
  build-depends:     base >=4.7 && <5,
                     routesbuilder,
                     text,
                     directory,
                     filepath
  ghc-options:       -odir build/obj -hidir build/hi
  default-language:  Haskell2010
