cabal-version:       1.14
name:                app
version:             0.1.0.0
build-type:          Simple

executable app
  main-is:           Main.hs
  hs-source-dirs:    .
  build-depends:     base >=4.7 && <5,
                     directory,
                     text,
                     filepath,
                     modelbuilder >=0.1.0.0,
                     routesbuilder >=0.1.0.0
  ghc-options:       -odir build/obj -hidir build/hi -v0
  default-language:  Haskell2010
